# lazymerge

./: demo.py  pyproject.toml
docs/examples/: demo.ipynb
lazymerge/: __init__.py  conventions.py  merge.py  sources.py  target.py  warp.py
tests/: test_conventions.py  test_merge.py  test_sources.py  test_target.py  test_warp.py
